Changed topic from RPG (lecture example) to Promo Card