@@ -1,10 +1,12 @@
 package com.trybisz;
 
-import com.trybisz.dto.CharacterDto;
-import com.trybisz.entity.Character;
-import com.trybisz.entity.Profession;
+import com.trybisz.entity.Partner;
+import com.trybisz.entity.Offer;
+import com.trybisz.dto.OfferDto;
 
 import java.io.*;
+import java.net.MalformedURLException;
+import java.net.URL;
 import java.util.*;
 import java.util.concurrent.ForkJoinPool;
 import java.util.stream.Collectors;
@@ -12,107 +14,115 @@ import java.util.stream.Collectors;
 public class Main {
 
     public static void main(String[] args) {
-        var professions = generateData();
-
+        var partners = generateData();
         System.out.println("TASK 1,2");
-        professions.forEach(
-                profession -> {
-                    System.out.println(profession);
-                    profession.getCharacters().forEach(System.out::println);
+        partners.forEach(
+                partner -> {
+                    System.out.println(partner);
+                    partner.getOffers().forEach(System.out::println);
                 }
         );
         System.out.println("TASK 3");
-        Set<Character> allCharacters = professions.stream()
-                .map(Profession::getCharacters)
+        Set<Offer> allOffers = partners.stream()
+                .map(Partner::getOffers)
                 .flatMap(Collection::stream)
                 .collect(Collectors.toSet());
 
-        allCharacters.forEach(System.out::println);
+        allOffers.forEach(System.out::println);
 
         System.out.println("TASK 4");
-        allCharacters.stream()
-                .filter(character -> character.getProfession().getBaseArmor()>50)
-                .sorted(Comparator.comparing(Character::getLevel))
+        allOffers.stream()
+                .filter(Offer -> Offer.getPartner().getSinceYear()<2018)
+                .sorted(Comparator.comparing(Offer::getValidTo))
                 .forEach(System.out::println);
 
         System.out.println("TASK 5");
-        List<CharacterDto> dtoList = allCharacters.stream()
-                .map(CharacterDto::new)
-                .sorted().toList();
+        List<OfferDto> dtoList = allOffers.stream()
+                .map(OfferDto::new)
+                .sorted().collect(Collectors.toList());
 
         dtoList.forEach(System.out::println);
 
         System.out.println("TASK 6");
-        serializeData(professions,"data.bin");
+        serializeData(partners,"data.bin");
         var deserialized = deserializeData("data.bin");
         deserialized.forEach(
-                profession -> {
-                    System.out.println(profession);
-                    profession.getCharacters().forEach(System.out::println);
+                partner -> {
+                    System.out.println(partner);
+                    partner.getOffers().forEach(System.out::println);
                 }
         );
 
         System.out.println("TASK 7");
-        try(ForkJoinPool fjp = new ForkJoinPool(8)){
-            Runnable job = () -> professions.parallelStream().forEach(profession -> {
-                System.out.println(profession);
-                profession.getCharacters().forEach(character -> {
-                    try {
-                        System.out.println(character);
-                        Thread.sleep(200);
-                    } catch (InterruptedException e) {
-                        throw new RuntimeException(e);
-                    }
-                });
+        ForkJoinPool fjp = new ForkJoinPool(5);
+        Runnable job = () -> partners.parallelStream().forEach(partner -> {
+            System.out.println(partner);
+            partner.getOffers().forEach(Offer -> {
+                try {
+                    System.out.println(Offer);
+                    Thread.sleep(500);
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
             });
-            fjp.submit(job);
-        }
+        });
+        fjp.submit(job).join();
+        fjp.shutdown();
     }
 
-    private static ArrayList<Profession> generateData(){
-        var professions = new ArrayList<Profession>();
+    private static ArrayList<Partner> generateData(){
+        var Partners = new ArrayList<Partner>();
         Random random = new Random();
 
         for (int i = 0; i < 5; i++) {
-            var profession = Profession.builder()
-                    .name("Profession" + i)
-                    .baseArmor(random.nextInt(100))
-                    .characters(new ArrayList<>())
-                    .build();
-            professions.add(profession);
+            Partner partner = null;
+            try {
+                partner = Partner.builder()
+                        .Name("Partner" + i)
+                        .Website(new URL("https://partner"+i+".com"))
+                        .Offers(new ArrayList<>())
+                        .SinceYear(random.nextInt(2024-2000)+2000)
+                        .build();
+            } catch (MalformedURLException e) {
+                throw new RuntimeException(e);
+            }
+            Partners.add(partner);
         }
 
         for (int i = 0; i < 10; i++) {
-            var professionId = random.nextInt(5);
-            var character = Character.builder()
-                    .name("Character" + i)
-                    .level(random.nextInt(100))
-                    .profession(professions.get(professionId))
+            var PartnerId = random.nextInt(5);
+            var fromDate = new Date(random.nextInt(2024-2000)+110,random.nextInt(12)+1,random.nextInt(30)+1);
+            var offer = Offer.builder()
+                    .Title("Offer" + i)
+                    .Description("Lorem ipsum...")
+                    .ValidFrom(fromDate)
+                    .ValidTo(new Date(fromDate.getYear(),fromDate.getMonth()+2,fromDate.getDay()))
+                    .Partner(Partners.get(PartnerId))
                     .build();
-            professions.get(professionId).getCharacters().add(character);
+            Partners.get(PartnerId).getOffers().add(offer);
         }
-        return professions;
+        return Partners;
     }
 
-    private static void serializeData(ArrayList<Profession> professions, String filename){
+    private static void serializeData(ArrayList<Partner> partners, String filename){
         try(FileOutputStream fos = new FileOutputStream(filename)) {
             ObjectOutputStream oos = new ObjectOutputStream(fos);
-            oos.writeObject(professions);
+            oos.writeObject(partners);
             oos.close();
         } catch (IOException e) {
             System.err.println("Failed to open output stream: "+e);
         }
     }
 
-    private static ArrayList<Profession> deserializeData(String filename){
-        ArrayList<Profession> professions = new ArrayList<>();
+    private static ArrayList<Partner> deserializeData(String filename){
+        ArrayList<Partner> partners = new ArrayList<>();
         try(FileInputStream fis = new FileInputStream(filename)){
             ObjectInputStream ois = new ObjectInputStream(fis);
-            professions = (ArrayList<Profession>) ois.readObject();
+            partners = (ArrayList<Partner>) ois.readObject();
             ois.close();
         } catch (IOException | ClassNotFoundException e) {
             System.err.println("Failed to open input stream: "+e);
         }
-        return professions;
+        return partners;
     }
 }
